[gd_scene load_steps=6 format=3 uid="uid://daplyo5gulfgr"]

[ext_resource type="Script" uid="uid://dalofputfsq8q" path="res://Scripts/game.gd" id="1_ciybh"]
[ext_resource type="PackedScene" uid="uid://b78itctx0y0pn" path="res://Scenes/Player/player.tscn" id="2_flgk0"]
[ext_resource type="PackedScene" uid="uid://q2l3q8mxk0pr" path="res://Scenes/Target/target.tscn" id="3_vifcx"]

[sub_resource type="BoxMesh" id="BoxMesh_qikps"]
lightmap_size_hint = Vector2i(-4, 0)
size = Vector3(1920, 1080, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i1e5p"]
size = Vector2(1920, 1080)

[node name="Game" type="Node"]
script = ExtResource("1_ciybh")

[node name="GetTargetTimer" type="Timer" parent="."]

[node name="Player" parent="." groups=["game_trace"] instance=ExtResource("2_flgk0")]
top_level = true
visibility_layer = 7
z_index = 7
z_as_relative = false

[node name="Target" parent="." instance=ExtResource("3_vifcx")]
visibility_layer = 3
z_index = 3
z_as_relative = false

[node name="GameArea" type="MeshInstance2D" parent="."]
z_as_relative = false
position = Vector2(960, 540)
mesh = SubResource("BoxMesh_qikps")

[node name="StaticBody2D" type="StaticBody2D" parent="GameArea"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/StaticBody2D"]
visible = false
shape = SubResource("RectangleShape2D_i1e5p")

[connection signal="hitted" from="." to="." method="_on_hitted"]
[connection signal="missed" from="." to="." method="_on_missed"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="reset_game" from="Player" to="." method="_on_player_reset_game"]
[connection signal="player_in" from="Target" to="." method="_on_target_player_in"]
[connection signal="player_out" from="Target" to="." method="_on_target_player_out"]
